<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarSetLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/textViewStartLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_location_label"
        android:textAlignment="center" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextViewStartLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_location"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewEndLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_location_label"
        android:textAlignment="center" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextViewEndLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_location"
        android:textAlignment="center" />

    <Button
        android:id="@+id/start_routing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_routing" />

</LinearLayout>